--- a/exam_paper__.tex
+++ b/exam_paper__.tex
@@ -8,8 +8,8 @@
   
   \textbf{Birla Vishwakarma Mahavidhyalaya(Engineering College)} \\
   \textbf{\textit{(An Autonomous Institute)}} \\
-  \textbf{First Year, B.Tecj} \\
-  \textbf{1st mid sem ,Odd,AY 2045-46} \\
+  \textbf{ Year, } \\
+  \textbf{ ,,AY } \\
   \vspace{4mm}
   
   
@@ -17,14 +17,14 @@
   \end{large}
   %Course code, title, maximum marks, date, time
   \begin{large}
-  \textbf{Course Code:}  
+  \textbf{Course Code: SCP01}  
   \hspace{20mm}
-  \textbf{Course Title:}\vspace{2mm}\\
+  \textbf{Course Title: sample course}\vspace{2mm}\\
   \textbf{Date:} 
-  \parbox[t]{37mm}{20/8/2045}
+  \parbox[t]{37mm}{}
   \textbf{Time:}
-  \parbox[t]{37mm}{10:00 PM}
-  \textbf{Maximum Marks: 30}
+  \parbox[t]{37mm}{}
+  \textbf{Maximum Marks: }
   \end{large} \\
   \rule{162mm}{0.3mm}
   \textbf{Instruction}
@@ -33,40 +33,13 @@
   
   \begin{itemize}
       \item Numbers in the square brackets to the right indicate maximum marks.
-      \item Instruction 2
+      \item 
       \item The text just below marks indicates the Course Outcome Nos. (CO) followed by the Bloom’s taxonomy level of the question, i.e., R: Remember, U: Understand, A: Apply, N: Analyze,       E: Evaluate, C: Create
   \end{itemize}
   \rule{162mm}{0.3mm}
   \begin{questions}
 \pointname{}
 \pointsinrightmargin
-\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\newline{2U}}}
-\question
-\vspace{-\baselineskip}\vspace{1.5mm}Answer The Following.
-\begin{parts}
-\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\newline{1U}}}\part[2] what is nfa?
-\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\newline{1U}}}\part[2] what is dfa?
-\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\newline{1U}}}\part[2] what is nfa explain?
-\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\newline{1U}}}\part[2] what is need of nfa?
-\end{parts}
-\question
-\vspace{-\baselineskip}\vspace{1.5mm}Answer The Following.
-\begin{parts}
-\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\newline{1U}}}\part[2] what is lucky draw?
-\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\newline{1U}}}\part[2] what is victory?
-\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\newline{1U}}}\part[2] what is money?
-\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\newline{1U}}}\part[2] what is current?
-\end{parts}
-\question
-\vspace{-\baselineskip}\vspace{1.5mm}Answer The Following.
-\begin{parts}
-\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\newline{1U}}}\part[2] define internship
-\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\newline{1U}}}\part[2] what is gold?
-\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\newline{1U}}}\part[2] what is glass?
-\end{parts}
-\question
-\vspace{-\baselineskip}\vspace{1.5mm}define computer
-\question
-\vspace{-\baselineskip}\vspace{1.5mm}what is aashram?
+\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}}}
 \end{questions}
 \end{document}
