MCQ In Generated Paper

--- a/exam_paper__.tex
+++ b/exam_paper__.tex
@@ -16,8 +16,8 @@
     \begin{center}
  \textbf{Birla Vishwakarma Mahavidhyalaya(Engineering College)} \\
   \textbf{\textit{(An Autonomous Institute)}} \\
-  \textbf{First Year, B.Tech} \\
-  \textbf{1st Mid Semester Examination ,Odd,AY AY 2022-23} \\
+  \textbf{undefined Year, undefined} \\
+  \textbf{undefined ,undefined,AY AY 2022-23} \\
   \vspace{4mm}
  
  
@@ -27,9 +27,9 @@
   \hspace{-7mm}
   \parbox[t]{50mm}{\textbf{Course Code: 3cp02}}
   \parbox[t]{100mm}{\textbf{Course Title: General Knowledge}}\vspace{2mm}\\
-  \parbox[t]{50mm}{\textbf{Date: 2022.09.21}}
+  \parbox[t]{50mm}{\textbf{Date: }}
   \parbox[t]{75mm}{\textbf{Time : 00:00 AM to 00:00 AM}}
-  \parbox[t]{50mm}{\textbf{Maximum Marks: 30}}\\
+  \parbox[t]{50mm}{\textbf{Maximum Marks: }}\\
   \line(1,0){170mm} \vspace{2mm}
   \hspace{-6mm}\textbf{Instruction}
 
@@ -38,7 +38,7 @@
 
   \begin{itemize}[leftmargin=4mm,rightmargin=-2cm]
       \item Numbers in the square brackets to the right indicate maximum marks.
-     \item You will get UFM if Write Paper,\item Person named nikunj will fail for sure
+     
       \item The text just below marks indicates the Course Outcome Nos. (CO) followed by the Bloom’s taxonomy level of the question, i.e., R: Remember, U: Understand, A: Apply, N: Analyze, E: Evaluate, C: Create
   \end{itemize}
   \line(1,0){170mm}
@@ -47,28 +47,16 @@
 \pointname{}
 \pointsinrightmargin
 \pointformat{\parbox[t]{16pt}{\text{[\thepoints]}}}
-\question[10]
-\vspace{3mm}Answer Jobless Questions.
-\begin{parts}
-\part Mr. Thomas invested an amount of Rs. 13,900 divided in two different schemes A and B at the simple interest rate of 14% p.a. and 11% p.a. respectively. If the total amount of simple interest earned in 2 years be Rs. 3508, what was the amount invested in Scheme B?
-\part Three pipes A, B and C can fill a tank from empty to full in 30 minutes, 20 minutes, and 10 minutes respectively. When the tank is empty, all the three pipes are opened. A, B and C discharge chemical solutions P,Q and R respectively. What is the proportion of the solution R in the liquid in the tank after 3 minutes?
-\end{parts}
-\question[15]
-\vspace{3mm}Answer Some Easy Questions.
-\begin{parts}
-\part A bank offers 5% compound interest calculated on half-yearly basis. A customer deposits Rs. 1600 each on 1st January and 1st July of a year. At the end of the year, the amount he would have gained by way of interest is:
-\part A, B, C rent a pasture. A puts 10 oxen for 7 months, B puts 12 oxen for 5 months and C puts 15 oxen for 3 months for grazing. If the rent of the pasture is Rs. 175, how much must C pay as his share of rent?
-\part what is your name in real life?
-\end{parts}
-\question[20]
-\vspace{3mm}Answer Some Paplu Questions
-\begin{parts}
-\part what is nfa?
-\part what is nfa explain?
-\part what is money?
-\part what is lucky draw?
-\end{parts}
 \question[5]
-\vspace{3mm}Two pipes A and B together can fill a cistern in 4 hours. Had they been opened separately, then B would have taken 6 hours more than A to fill the cistern. How much time will be taken by A to fill the cistern separately?
+\vspace{3mm}a
+\begin{parts}
+\part what is your real name?\\
+\begin{oneparchoices}
+\choice mihir
+\choice krupal
+\choice nandraj
+\choice none of these
+\end{oneparchoices}
+\end{parts}
 \end{questions}
 \end{document}
