Fixed Question List Bug

--- a/exam_paper__.tex
+++ b/exam_paper__.tex
@@ -16,8 +16,8 @@
     \begin{center}
  \textbf{Birla Vishwakarma Mahavidhyalaya(Engineering College)} \\
   \textbf{\textit{(An Autonomous Institute)}} \\
-  \textbf{undefined Year, undefined} \\
-  \textbf{undefined ,undefined,AY AY 2022-23} \\
+  \textbf{First Year, B.Tech} \\
+  \textbf{1st Mid Semester Examination ,Odd,AY AY 2022-23} \\
   \vspace{4mm}
  
  
@@ -27,9 +27,9 @@
   \hspace{-7mm}
   \parbox[t]{50mm}{\textbf{Course Code: 3cp02}}
   \parbox[t]{100mm}{\textbf{Course Title: General Knowledge}}\vspace{2mm}\\
-  \parbox[t]{50mm}{\textbf{Date: }}
-  \parbox[t]{75mm}{\textbf{Time : 00:00 AM to 00:00 AM}}
-  \parbox[t]{50mm}{\textbf{Maximum Marks: }}\\
+  \parbox[t]{50mm}{\textbf{Date: 2022.09.22}}
+  \parbox[t]{75mm}{\textbf{Time : 12:00 AM to 0:00 PM}}
+  \parbox[t]{50mm}{\textbf{Maximum Marks: 30}}\\
   \line(1,0){170mm} \vspace{2mm}
   \hspace{-6mm}\textbf{Instruction}
 
@@ -48,15 +48,15 @@
 \pointsinrightmargin
 \pointformat{\parbox[t]{16pt}{\text{[\thepoints]}}}
 \question[5]
-\vspace{3mm}a
-\begin{parts}
-\part what is your real name?\\
+\vspace{1.5mm}what is your game name?
+
+\vspace{1.5mm}
 \begin{oneparchoices}
-\choice mihir
-\choice krupal
-\choice nandraj
-\choice none of these
+\choice crazyboy
+\choice nomercy
+\choice realgamer
+\choice extreme gamer
 \end{oneparchoices}
-\end{parts}
+\vspace{1.5mm}
 \end{questions}
 \end{document}
