UI/UX Improved + Marks Count

--- a/exam_paper__.tex
+++ b/exam_paper__.tex
@@ -16,8 +16,8 @@
     \begin{center}
  \textbf{Birla Vishwakarma Mahavidhyalaya(Engineering College)} \\
   \textbf{\textit{(An Autonomous Institute)}} \\
-  \textbf{First Year, B.Tech} \\
-  \textbf{1st Mid Semester Examination ,Odd,AY AY 2022-23} \\
+  \textbf{undefined Year, undefined} \\
+  \textbf{undefined ,undefined,AY AY 2022-23} \\
   \vspace{4mm}
  
  
@@ -27,9 +27,9 @@
   \hspace{-7mm}
   \parbox[t]{50mm}{\textbf{Course Code: 3cp02}}
   \parbox[t]{100mm}{\textbf{Course Title: General Knowledge}}\vspace{2mm}\\
-  \parbox[t]{50mm}{\textbf{Date: 2022.09.22}}
-  \parbox[t]{75mm}{\textbf{Time : 12:00 AM to 0:00 PM}}
-  \parbox[t]{50mm}{\textbf{Maximum Marks: 30}}\\
+  \parbox[t]{50mm}{\textbf{Date: }}
+  \parbox[t]{75mm}{\textbf{Time : 00:00 AM to 00:00 AM}}
+  \parbox[t]{50mm}{\textbf{Maximum Marks: }}\\
   \line(1,0){170mm} \vspace{2mm}
   \hspace{-6mm}\textbf{Instruction}
 
@@ -46,17 +46,15 @@
 \begin{questions}
 \pointname{}
 \pointsinrightmargin
-\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}}}
-\question[5]
-\vspace{1.5mm}what is your game name?
+\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}}}\question[5]
+abac
 
 \vspace{1.5mm}
-\begin{oneparchoices}
-\choice crazyboy
-\choice nomercy
-\choice realgamer
-\choice extreme gamer
-\end{oneparchoices}
-\vspace{1.5mm}
+\begin{parts}
+\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\\ 1A}}\part[5] W\vspace{-\baselineskip}\vspace{1.5mm}hat is nfa? 
+
+\vspace{5mm}\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\\ 1A}}\part[5] W\vspace{-\baselineskip}\vspace{1.5mm}hat is dfa? 
+
+\vspace{5mm}\end{parts}
 \end{questions}
 \end{document}
