Cached Questions After Generating Paper

--- a/exam_paper__.tex
+++ b/exam_paper__.tex
@@ -46,15 +46,7 @@
 \begin{questions}
 \pointname{}
 \pointsinrightmargin
-\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}}}\question[5]
-abac
-
-\vspace{1.5mm}
-\begin{parts}
-\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\\ 1A}}\part[5] W\vspace{-\baselineskip}\vspace{1.5mm}hat is nfa? 
-
-\vspace{5mm}\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\\ 1A}}\part[5] W\vspace{-\baselineskip}\vspace{1.5mm}hat is dfa? 
-
-\vspace{5mm}\end{parts}
+\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\\ 2R}}\question[5]
+What is gold?
 \end{questions}
 \end{document}
