Modify Question (API Left) ✨ Save As Question ✔

--- a/exam_paper__.tex
+++ b/exam_paper__.tex
@@ -46,7 +46,9 @@
 \begin{questions}
 \pointname{}
 \pointsinrightmargin
-\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\\ 2R}}\question[5]
-What is gold?
+\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\\ 1A}}\question[5]
+What is nfa?
+\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\\ 1A}}\question[5]
+What is dfa?
 \end{questions}
 \end{document}
