--- a/exam_paper__.tex
+++ b/exam_paper__.tex
@@ -16,8 +16,8 @@
     \begin{center}
  \textbf{Birla Vishwakarma Mahavidhyalaya(Engineering College)} \\
   \textbf{\textit{(An Autonomous Institute)}} \\
-  \textbf{First Year, B.Tech} \\
-  \textbf{1st Mid Semester Examination ,Odd,AY AY 2022-23} \\
+  \textbf{undefined Year, undefined} \\
+  \textbf{undefined ,undefined,AY AY 2022-23} \\
   \vspace{4mm}
  
  
@@ -25,11 +25,11 @@
  
 %Course code, title, maximum marks, date, time
   \hspace{-7mm}
-  \parbox[t]{50mm}{\textbf{Course Code: SCP01}}
-  \parbox[t]{100mm}{\textbf{Course Title: sample course}}\vspace{2mm}\\
-  \parbox[t]{50mm}{\textbf{Date: 2022.10.07}}
-  \parbox[t]{75mm}{\textbf{Time : 00:02 AM to 00:03 AM}}
-  \parbox[t]{50mm}{\textbf{Maximum Marks: 30}}\\
+  \parbox[t]{50mm}{\textbf{Course Code: 3cp02}}
+  \parbox[t]{100mm}{\textbf{Course Title: General Knowledge}}\vspace{2mm}\\
+  \parbox[t]{50mm}{\textbf{Date: }}
+  \parbox[t]{75mm}{\textbf{Time : 00:00 AM to 00:00 AM}}
+  \parbox[t]{50mm}{\textbf{Maximum Marks: }}\\
   \line(1,0){170mm} \vspace{2mm}
   \hspace{-6mm}\textbf{Instruction}
 
@@ -46,7 +46,23 @@
 \begin{questions}
 \pointname{}
 \pointsinrightmargin
-\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\\ 1,2A}}\question[2]
-what is sample in course ?
+\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\\ 1A}}\question[5]
+what is nfa?
+\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\\ 1A}}\question[5]
+what is dfa?
+\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\\ 1,2A}}\question[5]
+what is nfa explain?
+\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\\ 1A}}\question[5]
+what is need of dfa?
+\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\\ 2R}}\question[5]
+what is your game name?
+\vspace{1.5mm}
+\begin{oneparchoices}
+\choice crazyboy
+\choice nomercy
+\choice realgamer
+\choice extreme gamer
+\end{oneparchoices}
+\vspace{1.5mm}
 \end{questions}
 \end{document}
