bug fixed from generatePaper api

--- a/exam_paper.tex
+++ b/exam_paper.tex
@@ -14,8 +14,8 @@
       \begin{center}
    \textbf{Birla Vishwakarma Mahavidhyalaya(Engineering College)} \\
     \textbf{\textit{(An Autonomous Institute)}} \\
-    \textbf{First Year, undefined} \\
-    \textbf{1st Mid Semester Examination ,undefined,AY AY 2022-23} \\
+    \textbf{First Year, M.Tech} \\
+    \textbf{End Semester Examination ,Even,AY AY 2022-23} \\
     \vspace{4mm}
    
    
@@ -25,9 +25,9 @@
     \hspace{-7mm}
     \parbox[t]{50mm}{\textbf{Course Code: 3cp02}}
     \parbox[t]{100mm}{\textbf{Course Title: General Knowledge}}\vspace{2mm}\\
-    \parbox[t]{50mm}{\textbf{Date: }}
-    \parbox[t]{75mm}{\textbf{Time : 11:11 AM to 11:11 AM}}
-    \parbox[t]{50mm}{\textbf{Maximum Marks: 15}}\\
+    \parbox[t]{50mm}{\textbf{Date: 1111.11.11}}
+    \parbox[t]{75mm}{\textbf{Time : 01:00 AM to 02:00 AM}}
+    \parbox[t]{50mm}{\textbf{Maximum Marks: 60}}\\
     \line(1,0){170mm} \vspace{2mm}
     \hspace{-6mm}\textbf{Instruction}
   
@@ -36,21 +36,138 @@
   
     \begin{itemize}[leftmargin=4mm,rightmargin=-2cm]
         \item Numbers in the square brackets to the right indicate maximum marks.
-       \item IN!
+       \item Info1,\item Info2
         \item The text just below marks indicates the Course Outcome Nos. (CO) followed by the Bloom’s taxonomy level of the question, i.e., R: Remember, U: Understand, A: Apply, N: Analyze, E: Evaluate, C: Create
     \end{itemize}
     \line(1,0){170mm}
    \vspace{5mm}
+\begin{center}
+\underline{\textbf{SECTION-1}}\\
+\end{center}
 \begin{questions}
-\pointname{}\pointsinrightmargin\question[5]
-\vspace{-\baselineskip}\vspace{3.5mm}what is nfa?
-\question[10]
-\vspace{-\baselineskip}\vspace{3.5mm}Answere following
+\pointname{}
+\pointsinrightmargin
+\question[5]
+\vspace{-\baselineskip}\vspace{3.5mm}HeyHeyHey
 \begin{parts}
-	\part[10] hihoh
+\pointformat{\parbox[t]{16pt}{\text{[\thepoints]}\newline{A}}}
+	\part[5] what is dfa?
+\end{parts}
+\question[15]
+\vspace{-\baselineskip}\vspace{3.5mm}JOJOJOJOOJO
+\begin{parts}
+	\part[15] KOKOKKOKOKKO
 \begin{subparts}
-		\subpart what is dfa?
-		\subpart what is nfa explain?
+		\subpart what is nfa?
+\subpart[5] what is your game name?
+\vspace{1.5mm}
+\begin{oneparchoices}\\
+	\choice crazyboy
+	\choice nomercy
+	\choice realgamer
+	\choice extreme gamer
+\end{oneparchoices}
+\vspace{1.5mm}
+\subpart[5] what is your fame name?
+\vspace{1.5mm}
+\begin{oneparchoices}\\
+	\choice harshad
+	\choice ajay kedia
+	\choice big bull
+	\choice bear
+\end{oneparchoices}
+\vspace{1.5mm}
 \end{subparts}
 \end{parts}
-\end{questions}\end{document}
+\question[5] what is your game name in real life?
+\vspace{1.5mm}
+\begin{oneparchoices}\\
+	\choice gamer guy
+	\choice fantastic gamer
+	\choice youth gamer
+	\choice noob gamer
+\end{oneparchoices}
+\vspace{1.5mm}
+\question[15]
+\vspace{-\baselineskip}\vspace{3.5mm}Answere following
+\begin{parts}
+\part[5] what is your goal in life?
+\vspace{1.5mm}
+\begin{oneparchoices}\\
+	\choice success
+	\choice rejection
+	\choice confession
+	\choice attraction
+\end{oneparchoices}
+\vspace{1.5mm}
+\part[5] what is your name in real life?
+\vspace{1.5mm}
+\begin{oneparchoices}\\
+	\choice ramesh
+	\choice suresh
+	\choice deepak
+	\choice raju
+\end{oneparchoices}
+\vspace{1.5mm}
+\part[5] what is your career goal?
+\vspace{1.5mm}
+\begin{oneparchoices}\\
+	\choice software developer
+	\choice QA engineer
+	\choice DBA
+	\choice Data administrator
+\end{oneparchoices}
+\vspace{1.5mm}
+\end{parts}
+\end{questions}\pagebreak
+\begin{center}
+\underline{\textbf{SECTION-2}}\\
+\end{center}
+\begin{questions}
+\pointname{}
+\pointsinrightmargin
+\question[15]
+\vspace{-\baselineskip}\vspace{3.5mm}Q@Q@Q@Q@Q@Q@Q
+\begin{parts}
+	\part[10] gogogogogogogoog
+\begin{subparts}
+\subpart[5] what is your real name?
+\vspace{1.5mm}
+\begin{oneparchoices}\\
+	\choice mihir
+	\choice krupal
+	\choice nandraj
+	\choice none of these
+\end{oneparchoices}
+\vspace{1.5mm}
+\subpart[5] what is your dream job?
+\vspace{1.5mm}
+\begin{oneparchoices}\\
+	\choice watchman
+	\choice peon
+	\choice ceo
+	\choice manager
+\end{oneparchoices}
+\vspace{1.5mm}
+\end{subparts}
+\part[5] what is your dream travel place?
+\vspace{1.5mm}
+\begin{oneparchoices}\\
+	\choice manali
+	\choice kullu
+	\choice shimla
+	\choice rhotang pass
+\end{oneparchoices}
+\vspace{1.5mm}
+\end{parts}
+\question[5] what is your dream wedding destination?
+\vspace{1.5mm}
+\begin{oneparchoices}\\
+	\choice goa
+	\choice maldives
+	\choice andaman and nicobar
+	\choice kerala
+\end{oneparchoices}
+\vspace{1.5mm}
+\end{questions}
+\end{document}
